main et footer html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,70 @@
             <img src="image/BGHero.png" alt="livre de design">          
         </div>
     </main> <br> <br>
+    <div class="flex" id="flex1">
+        <div>
+            <img src="image/📤.png" alt="icone">
+            <h3>Request Design</h3>
+            <p>Send us a message with all the details. At any time during the day. Through <span>Discord, Slack</span>, or even <span>WhatsApp</span>.</p>
+        </div>
+        <div>
+            <img src="image/🤸.png" alt="icone">
+            <h3>Quick Response</h3>
+            <p>One of our designers will get back to you within 24 hrs detailing the time frame you will be receiving your designs.</p>
+        </div>
+        <div>
+            <img src="image/📚.png" alt="icone">
+            <h3>Revisions.</h3>
+            <p>Unlimited revisions are included in all our plans. At no extra fee whatsoever so that we can ensure you love the final designs.</p>
+        </div>
+        <div>
+            <img src="image/🎉.png" alt="icone">
+            <h3>All done.</h3>
+            <p>Done with one project? No problem, keep asking for more, it's all included in the price. Again, at no extra fee whatsoever!</p>
+        </div>
+    </div> <br> <br>
+    <div>
+        <h2>Transparent Pricing.</h2>
+        <p>No hidden fees or extra charges, view the charts for all things pricing- <br> related.</p>
+        <div class="flex" id="flex2">
+            <div class="relative">
+                <h3 class="agra">Startup</h3>
+                <button class="tff">Try for free</button>
+                <ul class="startup">
+                    <li>Brochures, websites, applications.</li>
+                    <li>Free stock photos.</li>
+                    <li>Unlimited revisions.</li>
+                    <li>Unlimited orders.</li>
+                </ul>
+                <p class="fin"><span>$699</span>/mo</p>
+            </div>
+            <div class="relative">
+                <h3 class="agra">Business</h3>
+                <button class="tff">Try for free</button>
+                <ul class="startup">
+                    <li><span>All startup features.</span></li>
+                    <li>Front-end development.</li>
+                    <li>Full-time support.</li>
+                    <li>Slack communication.</li>
+                </ul>
+                <p class="fin"><span>$1299</span>/mo</p>
+            </div>
+            <div class="relative">
+                <h3 class="agra">Enterprise</h3>
+                <button class="tff">Schedule consultancy call</button>
+                <p>We offer customizable plans for enterprises who are looking to make use of our service. </p>
+                <p class="fin"><span>Contact Us</span></p>
+            </div>
+            <div id="aside" style="background-color: #FBF7EE;border: black solid 1px;">
+                <p>Ads via Carbon</p>
+                <img src="image/ads.png" alt="salle noir" width="100%">
+                <p>Get 20% off Adobe Plans using our Promo Code 'desi.gn20'</p>
+            </div>
+        </div>
+    </div> <br> <br>
+    <footer>
+        <p>Made with <span>❤️</span> by {Juban Code}</p>
+    </footer>
     
 </body>
 </html>
